# PIScanner

./: README.md
.zed/: debug.json
client/: Makefile  README.md  install.py  pyproject.toml  requirements-dev.txt  requirements.txt
client/piscanner_client/: __main__.py  scanner.py
client/piscanner_client/hardware/: stepper.py  webcam.py
server/: Dockerfile  README.md  main.py  pyproject.toml
server/api/: images.py  scan_websocket.py
server/bruno/: Root.bru  bruno.json
server/bruno/images/: Get Image.bru  Get Images for ScanID.bru  Upload.bru  folder.bru
server/bruno/scans/: folder.bru
server/core/: loghandler.py  settings.py
server/handlers/: scans_handler.py  websocket_handler.py
server/schemas/: images_schemas.py  scan_schemas.py  websocket_schemas.py
server/static/style/: base.css
server/static/templates/: all_scans.html  scan.html
server/views/: base.py  images.py  images_view.py  scans.py
server/views/templates/: scan.html
