[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piscanner_client"
version = "0.1.0"
description = "Raspberry Pi scanner client for GPIO control and camera operations"
authors = [
   {name = "Nick Brisebois", email = "email@nick-b.ca"}
]
license = {text= "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["raspberry pi", "scanner", "gpio", "camera", "3D", "printing", "3D printing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "gpiozero",
    "lgpio",
    "opencv-python-headless"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "isort",
    "mypy",
    "pytest"
]

[tool.hatch.build.targets.wheel]
include = ["piscanner_client"]

[pyright]
pythonVersion = "3.11"
include = ["piscanner_client"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
